--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>first html</title>
-</head>
-<body>
-<p1>hello,world!</p1>
-<p1>long long ago</p1>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>first html</title>
+  </head>
+
+  <body>
+    <p1>hello,world!</p1>
+    <p1>long long ago</p1>
+    <p1>happy birthday</p1>
+  </body>
 </html>
