--- a/games/hoge.html
+++ b/games/hoge.html
@@ -2,13 +2,22 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>first html</title>
+    <title>Four Leaves</title>
+    <meta name="viewport" content="width=device-width,
+    initial-scale=1.0,
+    maximum-scale=1.0,user-scalable=no">
+    <script src="./script/lib/enchant.js"></script>
+    <script src="./js/main.js"></script>
+
+    <style>
+      body{
+        padding:0;
+        margin:0;
+      }
+    </style>
   </head>
 
-  <body>
-    <p1>hello,world!</p1>
-    <p1>long long ago</p1>
-    <p1>happy birthday</p1>
-    <p2>four-leaves</p2>
+  <body style="background: #000;">
+
   </body>
 </html>
