--- a/games/chieri.html
+++ b/games/chieri.html
@@ -7,7 +7,6 @@
     initial-scale=1.0,
     maximum-scale=1.0,user-scalable=no">
     <script src="./script/lib/enchant.js"></script>
-    <script src="./js/main.js"></script>
 
     <style>
       body{
@@ -17,7 +16,7 @@
     </style>
   </head>
 
-  <body style="background: #000;">
-
+  <body>
+    <script src="./script/main.js"></script>
   </body>
 </html>
