--- a/games/chieri.html
+++ b/games/chieri.html
@@ -7,6 +7,7 @@
     initial-scale=1.0,
     maximum-scale=1.0,user-scalable=no">
     <script src="./script/lib/enchant.js"></script>
+    <script src="./script/lib/ui.enchant.js"></script>
 
     <style>
       body{
