--- a/pjs/index.html
+++ b/pjs/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>smartphone test</title>
-    <script src="https://raw.githubusercontent.com/processing-js/processing-js/v1.4.8/processing.min.js"></script>
+    <script src="js/processing.min.js"></script>
   </head>
   <body>
     <canvas data-processing-sources="source.pde"></canvas>
